[package]
name = "portfolio"
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"

[[bin]]
name = "folio"
path = "src/bin/folio.rs"

[dependencies]
fin_model = { version = "0.1", path = "../rust-financial/fin_model" }
fin_iex = { version = "0.1", path = "../rust-financial/fin_iex" }

lazy_static = "1.3.0"
log = { version = "0.4", features = ["std"] }
shellexpand = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
steel-cent = "0.2.2"
toml = "0.4.2"

# Command-Line feature dependencies
clap = "~2.33"
flexi_logger = { version = "^0.13.2", features = ["colors", "specfile", "ziplogs"] }
num-format = { version = "0.4", default-features = false, features = ["with-system-locale"] }
prettytable-rs = "0.8.0"
term_size = "0.3"